--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         /* 增强的芯片背景 */
-        .chip-bg {
+        。chip-bg {
             position: fixed;
             opacity: 0.03;
             pointer-events: none;
@@ -51,7 +51,7 @@
             animation: chipFloat 8s ease-in-out infinite alternate;
         }
 
-        .chip-bg:nth-child(1) {
+        。chip-bg:nth-child(1) {
             top: 5%;
             right: 5%;
             width: 400px;
@@ -59,7 +59,7 @@
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='chipGrad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%2300ccff' opacity='0.8'/%3E%3Cstop offset='100%25' stop-color='%2300ff88' opacity='0.8'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='30' y='30' width='140' height='140' rx='8' fill='none' stroke='url(%23chipGrad)' stroke-width='2'/%3E%3Cpath d='M50,30 L50,10 M90,30 L90,10 M110,30 L110,10 M150,30 L150,10 M50,170 L50,190 M90,170 L90,190 M110,170 L110,190 M150,170 L150,190 M30,50 L10,50 M30,90 L10,90 M30,110 L10,110 M30,150 L10,150 M170,50 L190,50 M170,90 L190,90 M170,110 L190,110 M170,150 L190,150' stroke='url(%23chipGrad)' stroke-width='2'/%3E%3Crect x='60' y='60' width='80' height='80' rx='4' fill='url(%23chipGrad)' opacity='0.2'/%3E%3Cg stroke='%23ffffff' stroke-width='1' opacity='0.6'%3E%3Cpath d='M70,70 L130,70 M70,80 L130,80 M70,90 L130,90 M70,100 L130,100 M70,110 L130,110 M70,120 L130,120 M70,130 L130,130'/%3E%3Cpath d='M80,70 L80,130 M90,70 L90,130 M100,70 L100,130 M110,70 L110,130 M120,70 L120,130'/%3E%3C/g%3E%3C/svg%3E");
         }
 
-        .chip-bg:nth-child(2) {
+        。chip-bg:nth-child(2) {
             bottom: 10%;
             left: 5%;
             width: 300px;
