--- a/index.html
+++ b/index.html
@@ -134,36 +134,35 @@
             <div class="card">
                 <h3>📖 章节导航 Chapter Navigation</h3>
                 <div class="chapter-nav">
-                    <!-- href 的 #chapterX 将在脚本里被替换为真实 GitHub 文章链接 -->
-                    <a href="#chapter1" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_Ch1.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch1: 纳米技术基础</h4>
                         <p>Introduction to Nanotechnology</p>
                     </a>
-                    <a href="#chapter2" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_Ch2.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch2: 光刻技术</h4>
                         <p>Photolithography Process</p>
                     </a>
-                    <a href="#chapter3" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Leaining_Ch3.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch3: 电子束光刻</h4>
                         <p>Electron Beam Lithography</p>
                     </a>
-                    <a href="#chapter4" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Leaining_Ch4.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch4: 纳米压印</h4>
                         <p>Nanoimprint Lithography</p>
                     </a>
-                    <a href="#chapter5" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_Ch5.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch5: 刻蚀工艺</h4>
                         <p>Etching Techniques</p>
                     </a>
-                    <a href="#chapter6" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_Ch6.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch6: 薄膜沉积</h4>
                         <p>Thin Film Deposition</p>
                     </a>
-                    <a href="#chapter7" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_ch7.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch7: 表征手段</h4>
                         <p>Characterization Tools</p>
                     </a>
-                    <a href="#chapter8" class="chapter-item">
+                    <a href="https://github.com/keys2023190905023/MicroNano_Fab_Learning/blob/main/Nano_Tech_Learning_Ch8.md" class="chapter-item" target="_blank" rel="noopener">
                         <h4>Ch8: 器件制造</h4>
                         <p>Device Fabrication</p>
                     </a>
